# resistance-miner

./: AUTHORS  Dockerfile  Makefile.am  NEWS  README  configure.ac  cpu-miner.c  cpuinfo.c  cpuinfo.h  miner.h  minerd.1  random.c  random.h  res-yespower.c  sha2.c  util.c
compat/jansson/: hashtable.c  load.c
debian/: changelog  control  copyright  make-helper-overrides.bsh  resistance-miner.install  rules  watch
